src/test/ui/codemap_tests/bad-format-args.stderr
error: requires at least a format string argument
  --> $DIR/bad-format-args.rs:2:5
   |
LL |     format!();
   |     ^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: expected token: `,`
  --> $DIR/bad-format-args.rs:3:16
   |
LL |     format!("" 1);
   |                ^ expected `,`

error: expected one of `,`, `.`, `?`, or an operator, found `1`
  --> $DIR/bad-format-args.rs:4:19
   |
LL |     format!("", 1 1);
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                   ^ expected `,`
=======
   |                   ^ expected one of `,`, `.`, `?`, or an operator here
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 3 previous errors

